--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing = "20">
     <tr>
       <td>
-        <img src="Darshan Nikam.jpg" alt="Image could not be loaded" width = "150" height = "150">
+        <img src="https://github.com/Darshan110801/My-Info-/blob/main/Darshan%20NIkam.jpg?raw=true" alt="Image could not be loaded" width = "150" height = "150">
       </td>
       <td>
         <h1>Darshan Nikam</h1>
